feat: adiciona suporte a modo de desenvolvimento