@@ -4,6 +4,7 @@ import br.com.uniube.seniorcare.domain.entity.AuditLog;
 import br.com.uniube.seniorcare.domain.exception.BusinessException;
 import br.com.uniube.seniorcare.domain.repository.AuditLogRepository;
 import br.com.uniube.seniorcare.service.AuditService;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -15,6 +16,9 @@ import java.util.UUID;
 public class AuditServiceImpl implements AuditService {
 
     private final AuditLogRepository auditLogRepository;
+
+    @Value("${app.security.development-mode:false}")
+    private boolean developmentMode;
 
     public AuditServiceImpl(AuditLogRepository auditLogRepository) {
         this.auditLogRepository = auditLogRepository;
@@ -28,34 +32,40 @@ public class AuditServiceImpl implements AuditService {
                             UUID entityId,
                             String description) {
 
+        // Em modo de desenvolvimento, não registra auditoria
+        if (developmentMode) {
+            return;
+        }
+
         validateInputs(organizationId, userId, action, entityName);
 
-        AuditLog log = AuditLog.builder()
-                .id(UUID.randomUUID())
+        // Create a new AuditLog instance
+        AuditLog auditLog = AuditLog.builder()
                 .organizationId(organizationId)
                 .userId(userId)
                 .action(action)
                 .entityName(entityName)
                 .entityId(entityId)
-                .timestamp(LocalDateTime.now())
                 .description(description)
+                .timestamp(LocalDateTime.now())
                 .build();
 
-        auditLogRepository.save(log);
+        // Save the new entity
+        auditLogRepository.save(auditLog);
     }
 
     private void validateInputs(UUID organizationId, UUID userId, String action, String entityName) {
         if (organizationId == null) {
-            throw new BusinessException("O ID da organização não pode ser nulo ao registrar auditoria.");
+            throw new BusinessException("OrganizationId é obrigatório para registros de auditoria");
         }
         if (userId == null) {
-            throw new BusinessException("O ID do usuário não pode ser nulo ao registrar auditoria.");
+            throw new BusinessException("UserId é obrigatório para registros de auditoria");
         }
-        if (action == null || action.isBlank()) {
-            throw new BusinessException("A ação não pode ser nula ou vazia ao registrar auditoria.");
+        if (action == null || action.trim().isEmpty()) {
+            throw new BusinessException("Action é obrigatório para registros de auditoria");
         }
-        if (entityName == null || entityName.isBlank()) {
-            throw new BusinessException("O nome da entidade não pode ser nulo ou vazio ao registrar auditoria.");
+        if (entityName == null || entityName.trim().isEmpty()) {
+            throw new BusinessException("EntityName é obrigatório para registros de auditoria");
         }
     }
 }
